ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript3/scannerES3NumericLiteral3/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript3/scannerES3NumericLiteral3/input.ts:1:3
  |
1 | 01.0
  |   ^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript3/scannerES3NumericLiteral3/input.ts:1:1
  |
1 | 01.0
  | ^^

error: Legacy octal literals are not available when targeting ECMAScript 5 and higher
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript3/scannerES3NumericLiteral3/input.ts:1:1
  |
1 | 01.0
  | ^^

error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript3/scannerES3NumericLiteral3/input.ts:1:1
  |
1 | 01.0
  | ^^

